
CHANGELOG
=========

Changes in V1.1  (Unreleased)
-----------------------------

 - added support for the extra BOOM/MBF things, states, sprites
   and sounds (e.g. the DOG).  The extra actions are there but
   only as place-holders.


Changes in V1.0  (4th June 2004)
--------------------------------

 - multiple patches (even binary ones !).

 - new option --edge specifies which version of EDGE to target.

 - binary patch text replacements for DOOM 1.666 and 1.7.

 - improved things: add MONSTER flag using good statistical test,
   use FACE_TARGET for certain attacks, add CAST_TITLE if needed,
   write RESURRECT states when thing uses A_VileChase.

 - fixed bug not writing double quotes (") into LDF.

 - fixed problem not handling 0xFF bytes in cheat strings.


Changes in V0.9  (7th February 2004)
------------------------------------

 - Initial public release !

 - fixed bug not writing percent signs (%) for a few things.

 - improved system definitions in i_defs.h.

 - thing improvements: fixed handling of A_PainDie, A_KeenDie and
   A_BrainDie.  Support AMBUSH flag.  Handle cases where multiple
   attacks get used.  Better handling of pick-up items.  Added
   workaround for A_Look when there are no sight states.

 - general improvements to the weapon flash logic.


Changes in earlier versions (Never Released)
--------------------------------------------

 - new storage module, which remembers modifications.

 - thing improvements: fixed monster infighting.  Convert palette
   translations.  Workaround for LOST_SOUL without missile states.

 - better separation of weapon and thing actions.

 - proper handling of dependencies.

 - fixed WAD code which was broken for big endian CPUs.
